--- a/index.html
+++ b/index.html
@@ -13,8 +13,31 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="./css/pages/home.css">
 </head>
 <body>
-    
+    <main>
+         <section class="container">
+            <div class="row-short">
+                HERO
+            </div>
+        </section>
+
+         <section class="container">
+            <div class="row">
+                MAIN
+            </div>
+        </section>
+    </main>
+
+    <footer class="container">
+        <div class="row">
+            SOCIALS
+        </div>
+        <div class="row-short">
+            FOOTER BOTTOM TEXT
+        </div>
+    </footer>
+
 </body>
 </html>
