--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 </head>
 <body>
     <main>
-         <section class="container">
+        <section class="container">
             <div class="row-short">
-                HERO
+                HERO Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam soluta delectus ipsum aspernatur quasi, optio vitae explicabo quis ex maxime eum, perspiciatis mollitia facilis voluptate expedita iusto ipsa id dolorum!
             </div>
         </section>
 
-         <section class="container">
+        <section class="container">
             <div class="row">
-                MAIN
+                MAIN Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio odio similique aspernatur iusto expedita id esse vitae, ut nam, ipsum perferendis neque ipsam, recusandae eos veniam. Illo est ab doloremque.
             </div>
         </section>
     </main>
