--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
         <section class="container">
             <div class="row">
-                MAIN Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio odio similique aspernatur iusto expedita id esse vitae, ut nam, ipsum perferendis neque ipsam, recusandae eos veniam. Illo est ab doloremque.
+                <div class="column-left">LEFT</div>
+                <div class="column-right">RIGHT</div>
             </div>
         </section>
     </main>
