Main content column

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
         <section class="container">
             <div class="row">
-                <div class="column-left">LEFT</div>
-                <div class="column-right">RIGHT</div>
+                <div class="column">MAIN CONTENT LEFT</div>
+                <div class="column column-right">MAIN CONTENT RIGHT</div>
             </div>
         </section>
     </main>
