--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <main>
-        <section class="container">
+        <section class="container bg-main">
             <div class="row-short">
                 HERO Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam soluta delectus ipsum aspernatur quasi, optio vitae explicabo quis ex maxime eum, perspiciatis mollitia facilis voluptate expedita iusto ipsa id dolorum!
             </div>
@@ -31,7 +31,7 @@
         </section>
     </main>
 
-    <footer class="container">
+    <footer class="container bg-main">
         <div class="row">
             SOCIALS
         </div>
