--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 </head>
 <body>
     <main>
-        <section class="container bg-main">
+        <section class="container bg-main hero">
             <div class="row-short">
-                HERO Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam soluta delectus ipsum aspernatur quasi, optio vitae explicabo quis ex maxime eum, perspiciatis mollitia facilis voluptate expedita iusto ipsa id dolorum!
+                <img class="logo" src="./img/logo.png" alt="logo">
+                <h1 class="main-title">Coming soon</h1>
+                <p class="main-description">An awesome new company for web recouces is coming very soon. Enter you email to request an early invation!</p>
             </div>
         </section>
 
