--- a/index.html
+++ b/index.html
@@ -27,8 +27,20 @@
 
         <section class="container">
             <div class="row">
-                <div class="column">MAIN CONTENT LEFT</div>
-                <div class="column column-right">MAIN CONTENT RIGHT</div>
+                <div class="column">
+                    <h2 class="column-title">Abaut startup</h2>
+                    <p class="column-description">Matrox material design multi purpose html template. It comes with huge content and backround variants <a href="#">Matrox</a> is coming very soon. We are nearly here.</p>
+                    <div class="progress-bar-group">
+                        <div class="progress-bar">PROGRESS BAR 1</div>
+                        <div class="progress-bar">PROGRESS BAR 2</div>
+                        <div class="progress-bar">PROGRESS BAR 3</div>
+                    </div>
+                </div>
+                <div class="column column-right">
+                    <h2 class="column-title">Have any question?</h2>
+                    <p class="column-description">You can use contact from below or contact us via email at: <a href="mailto:trendytheme.net@postoyou">trendytheme.net@postoyou</a>. Contact from is fully working and very easy to customize.</p>
+                    <form>MESSAGE FORM</form>
+                </div>
             </div>
         </section>
     </main>
