--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
     <footer class="container bg-main">
         <div class="row">
-            SOCIALS
+            <i class="fa fa-facebook-square" aria-hidden="true"></i>
+            <i class="fa fa-twitter" aria-hidden="true"></i>
+            <i class="fa fa-meetup" aria-hidden="true"></i>
         </div>
         <div class="row-short">
             FOOTER BOTTOM TEXT
