--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
                 <img class="logo" src="./img/logo.png" alt="logo">
                 <h1 class="main-title">Coming soon</h1>
                 <p class="main-description">An awesome new company for web recouces is coming very soon. Enter you email to request an early invation!</p>
+                <div class="clock">
+                    <div class="time">
+                        <div class="value">432</div>
+                        <div class="label">Days</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">09</div>
+                        <div class="label">Hours</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">37</div>
+                        <div class="label">Minutes</div>
+                    </div>
+                    <div class="time">
+                        <div class="value">39</div>
+                        <div class="label">Seconds</div>
+                    </div>
+                </div>
             </div>
         </section>
 
