--- a/index.html
+++ b/index.html
@@ -49,9 +49,12 @@
                     <h2 class="column-title">Abaut startup</h2>
                     <p class="column-description">Matrox material design multi purpose html template. It comes with huge content and backround variants <a href="#">Matrox</a> is coming very soon. We are nearly here.</p>
                     <div class="progress-bar-group">
-                        <div class="progress-bar">PROGRESS BAR 1</div>
-                        <div class="progress-bar">PROGRESS BAR 2</div>
-                        <div class="progress-bar">PROGRESS BAR 3</div>
+                        <div class="progress-bar">
+                            <div class="top">
+                                <p class="tittle">UX design</p>
+                                <p class="value">90%</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="column column-right">
