progress bar style

--- a/index.html
+++ b/index.html
@@ -54,6 +54,31 @@
                                 <p class="tittle">UX design</p>
                                 <p class="value">90%</p>
                             </div>
+                            <div class="bottom">
+                                <div class="progress"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar-group">
+                        <div class="progress-bar">
+                            <div class="top">
+                                <p class="tittle">Web design</p>
+                                <p class="value">86%</p>
+                            </div>
+                            <div class="bottom">
+                                <div class="progress"></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="progress-bar-group">
+                        <div class="progress-bar">
+                            <div class="top">
+                                <p class="tittle">Web development</p>
+                                <p class="value">85%</p>
+                            </div>
+                            <div class="bottom">
+                                <div class="progress"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
