progress bar static

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h2 class="column-title">Abaut startup</h2>
                     <p class="column-description">Matrox material design multi purpose html template. It comes with huge content and backround variants <a href="#">Matrox</a> is coming very soon. We are nearly here.</p>
                     <div class="progress-bar-group">
-                        <div class="progress-bar">
+                        <div class="progress-bar" style="--width: 90%">
                             <div class="top">
                                 <p class="tittle">UX design</p>
                                 <p class="value">90%</p>
@@ -59,7 +59,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="progress-bar-group">
+                    <div class="progress-bar-group" style="--width: 86%">
                         <div class="progress-bar">
                             <div class="top">
                                 <p class="tittle">Web design</p>
@@ -71,10 +71,10 @@
                         </div>
                     </div>
                     <div class="progress-bar-group">
-                        <div class="progress-bar">
+                        <div class="progress-bar" style="--width: 50%">
                             <div class="top">
                                 <p class="tittle">Web development</p>
-                                <p class="value">85%</p>
+                                <p class="value">50%</p>
                             </div>
                             <div class="bottom">
                                 <div class="progress"></div>
