Initial solution for text-trio lines

--- a/index.html
+++ b/index.html
@@ -103,8 +103,18 @@
             <a href="#" target="_blank" class="fa fa-rss"></a> 
         </div>
         <div class="row-short">
-            FOOTER BOTTOM TEXT
+            <img class="logo" src="./img/logo-white.webp" alt="logo">
+
+            <p class="text-trio">
+                <span>Copyright (c) 2023 <a href="#">Matrox</a></span>
+                <span class="line"></span>
+                <span>All right reserved</span>
+                <span class="line"></span>
+                <span>Designed by <a href="#" target="_blank">TrendyTheme</a></span>
+            </p>
+            <p class="footer-bottom">Matrox pack includes complete websides not just homepages, it comes whit full webside demos. Over <a href="#">200+</a> ready html files only for 17$. Purchase <a href="#">Matrox</a> Now!</p>
         </div>
+       
     </footer>
 
 </body>
